# DartSync

./: .gitignore  BackupManager.cpp  BackupManager.h  CMakeLists.txt  README.md  main.cpp
src/: BackupManager.cpp  BackupManager.h  ConsoleRedirect.cpp  ConsoleRedirect.h  main.cpp  main_gui.cpp
